efl (1.12.0-0.1) UNRELEASED; urgency=medium

  * Non-maintainer upload.
  * New upstream version

 -- Andreas Metzler <ametzler@debian.org>  Mon, 17 Nov 2014 18:50:55 +0100

efl (1.8.6-2.1) unstable; urgency=medium

  * Non-maintainer upload.
  * GnuTLS v3 transition: Change (build-)depends to libgnutls28-dev, add b-d
    on libgcrypt-dev. Closes: #753025
  * efl-doc built with doxygen 1.8.7-3 to work around #762272.

 -- Andreas Metzler <ametzler@debian.org>  Sat, 20 Sep 2014 14:47:56 +0200

efl (1.8.6-2) unstable; urgency=medium

  * patches/04_eina_suite_lockup: cherry-pick f5c125 to fix eina suite lockup

 -- Albin Tonnerre <lutin@debian.org>  Sun, 04 May 2014 13:54:21 +0200

efl (1.8.6-1) unstable; urgency=medium

  * New upstream version
  * debian/watch: update watch file to correctly parse alpha/beta versions
  * patches/{04_magic_debug_abi,05_eina_time_get}: remove, applied upstream

 -- Albin Tonnerre <lutin@debian.org>  Sun, 09 Mar 2014 12:31:42 +0100

efl (1.8.5-3) unstable; urgency=medium

  * debian/control: libedje1, libeio1, libeeze1, efl-dbg are now M-A: same
  * debian: add new package for Emotion
  * debian: add new packages for Ethumb/Ethumb-Client

 -- Albin Tonnerre <lutin@debian.org>  Sat, 01 Mar 2014 14:42:35 +0100

efl (1.8.5-2) unstable; urgency=medium

  * debian: enable GLES insead of regular GL on armel and armhf
  * debian/patches/04_magic_debug_abi: disable 'magic debug' to not break ABI.
    Eina uses a 'magic' number to perform checks on its data structures, but
    enabling this 'magic' number changes to ABI. Eina in debian is currently
    compiled without magic debug, so we need to this patch to keep ABI
    compatibility
  * debian/patches/05_eina_time_get: fix issues with clock_gettime on hurd/*bsd
  * Upload to unstable

 -- Albin Tonnerre <lutin@debian.org>  Sat, 22 Feb 2014 11:34:32 +0100

efl (1.8.5-1) experimental; urgency=medium

  * New upstream release
  * patches/04_eina_file_hash_fix: remove, applied upstream