@@ -1,9 +1,7 @@
-diff --git a/src/tests/ecore/ecore_suite.c b/src/tests/ecore/ecore_suite.c
-index 7119d7d..0df9f94 100644
 --- a/src/tests/ecore/ecore_suite.c
 +++ b/src/tests/ecore/ecore_suite.c
-@@ -22,7 +22,7 @@ static const Ecore_Test_Case etc[] = {
-   { "Ecore_Con", ecore_test_ecore_con },
+@@ -23,7 +23,7 @@ static const Ecore_Test_Case etc[] = {
+   { "Ecore_Con_Url", ecore_test_ecore_con_url },
    { "Ecore_X", ecore_test_ecore_x },
    { "Ecore_Imf", ecore_test_ecore_imf },
 -#if HAVE_ECORE_AUDIO
