@@ -2,6 +2,7 @@ efl (1.12.0-0.1) UNRELEASED; urgency=medium
 
   * Non-maintainer upload.
   * New upstream version
+    + Unfuzz 03_no_ecore_audio_test.diff.
 
  -- Andreas Metzler <ametzler@debian.org>  Mon, 17 Nov 2014 18:50:55 +0100
 
